tests/neg-custom-args/captures/i15772.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:20:49 ---------------------------------------
20 |    val boxed1 : (({*} C) => Unit) -> Unit = box1(c)  // error
   |                                             ^^^^^^^
   |                                             Found:    {c} ({*} ({c} C{val arg: {*} C}) -> Unit) -> Unit
   |                                             Required: (({*} C) => Unit) -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:27:38 ---------------------------------------
27 |    val boxed2 : Observe[{*} C] = box2(c)  // error
   |                                  ^^^^^^^
   |                                  Found:    {c} ({*} ({c} C{val arg: {*} C}) -> Unit) -> Unit
   |                                  Required: Observe[{*} C]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:33:37 ---------------------------------------
33 |  val boxed2 : Observe[{*} C] = box2(c) // error
   |                                     ^
   |                                     Found:    {*} C
   |                                     Required: box {*} C{val arg: ? C}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:44:2 ----------------------------------------
44 |  x: (() -> Unit) // error
   |  ^
   |  Found:    {x} () -> Unit
   |  Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
